# Line-Painting-Robot-T3

./: .gitignore  README.md
Firmware/diff_drive_controller/: encoder_handler.cpp  imu_manager.h
Robot firmware/diff_drive_controller/: diff_drive_controller.ino  encoder_handler.h  imu_manager.cpp  kinematics.h  motors_controller.cpp  motors_controller.h
Robot_firmware/diff_drive_controller/: kinematics.cpp
Software/ros2_ws/src/lidar_localization/: CMakeLists.txt  package.xml
Software/ros2_ws/src/lidar_localization/include/lidar_localization/: localizador_node.hpp
Software/ros2_ws/src/lidar_localization/src/: localizador_node.cpp
